@@ -119,6 +119,7 @@ $wgIgnoredMessages = array(
 	'pubmedurl',
 	'randompage-url',
 	'recentchanges-url',
+	'recentchangestext',
 	'revision-info-current',
 	'revision-nav',
 	'rfcurl',
